styles easier to override, fix #1 (wrong size on width=%)

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1,38 +1,42 @@
 .privacy-embed {
     position: relative;
-    display: inline-block;
-    background: transparent no-repeat center center;
-    background-size: cover;
 }
 
-.privacy-embed .privacy-embed-overlay {
-    display: block;
+.privacy-embed-overlay-wrapper, .privacy-embed-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.privacy-embed-overlay-wrapper {
+    background: transparent no-repeat center center;
+    background-size: cover;
+}
+
+.privacy-embed-overlay {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.privacy-embed .privacy-embed-overlay .privacy-embed-content {
+.privacy-embed-content {
     padding: 2rem;
     text-shadow: 0px 2px 5px #000;
 }
 
-.privacy-embed .privacy-embed-overlay .privacy-embed-content * {
+.privacy-embed-content * {
     color: #fff;
 }
 
-.privacy-embed .privacy-embed-overlay .privacy-embed-content a {
+.privacy-embed-content a {
     text-decoration: underline;
 }
 
-.privacy-embed .privacy-embed-overlay .privacy-embed-button-wrapper {
+.privacy-embed-button-wrapper {
     text-align: center;
 }
 
-.privacy-embed .privacy-embed-overlay .privacy-embed-button {
+.privacy-embed-button {
     display: inline-block;
     background-color: #fff;
     color: #333;
@@ -41,6 +45,6 @@
     border-radius: 3px;
 }
 
-.privacy-embed .privacy-embed-overlay .privacy-embed-button:hover {
+.privacy-embed-button:hover {
     outline: 0 none;
 }
